src/solution/sigmaott-cms-next/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cms-next
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 3000
    protocol: TCP
